; ModuleID = '/home/carl/AnghaBench/git/extr_bisect.c_get_bad_and_good_commits.c'
source_filename = "/home/carl/AnghaBench/git/extr_bisect.c_get_bad_and_good_commits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }
%struct.commit = type { i32 }
%struct.repository = type { i32 }

@good_revs = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@current_bad_oid = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.commit** (%struct.repository*, i32*)* @get_bad_and_good_commits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.commit** @get_bad_and_good_commits(%struct.repository* %0, i32* %1) #0 {
  %3 = alloca %struct.repository*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.commit**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.repository* %0, %struct.repository** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.commit**, %struct.commit*** %5, align 8
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @good_revs, i32 0, i32 0), align 8
  %10 = add nsw i32 1, %9
  %11 = call i32 @ALLOC_ARRAY(%struct.commit** %8, i32 %10)
  %12 = load %struct.repository*, %struct.repository** %3, align 8
  %13 = load i64, i64* @current_bad_oid, align 8
  %14 = call %struct.commit* @get_commit_reference(%struct.repository* %12, i64 %13)
  %15 = load %struct.commit**, %struct.commit*** %5, align 8
  %16 = load i32, i32* %7, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %7, align 4
  %18 = sext i32 %16 to i64
  %19 = getelementptr inbounds %struct.commit*, %struct.commit** %15, i64 %18
  store %struct.commit* %14, %struct.commit** %19, align 8
  store i32 0, i32* %6, align 4
  br label %20

20:                                               ; preds = %36, %2
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @good_revs, i32 0, i32 0), align 8
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %39

24:                                               ; preds = %20
  %25 = load %struct.repository*, %struct.repository** %3, align 8
  %26 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @good_revs, i32 0, i32 1), align 8
  %27 = load i32, i32* %6, align 4
  %28 = sext i32 %27 to i64
  %29 = add nsw i64 %26, %28
  %30 = call %struct.commit* @get_commit_reference(%struct.repository* %25, i64 %29)
  %31 = load %struct.commit**, %struct.commit*** %5, align 8
  %32 = load i32, i32* %7, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %7, align 4
  %34 = sext i32 %32 to i64
  %35 = getelementptr inbounds %struct.commit*, %struct.commit** %31, i64 %34
  store %struct.commit* %30, %struct.commit** %35, align 8
  br label %36

36:                                               ; preds = %24
  %37 = load i32, i32* %6, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %6, align 4
  br label %20

39:                                               ; preds = %20
  %40 = load i32, i32* %7, align 4
  %41 = load i32*, i32** %4, align 8
  store i32 %40, i32* %41, align 4
  %42 = load %struct.commit**, %struct.commit*** %5, align 8
  ret %struct.commit** %42
}

declare dso_local i32 @ALLOC_ARRAY(%struct.commit**, i32) #1

declare dso_local %struct.commit* @get_commit_reference(%struct.repository*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
